--- a/platform-gateway/src/main/resources/application.yml
+++ b/platform-gateway/src/main/resources/application.yml
@@ -125,19 +125,68 @@ management:
 # 断路器配置
 resilience4j:
   circuitbreaker:
-    instances:
-      config-service-cb:
+    configs:
+      default:
         sliding-window-size: 10
         minimum-number-of-calls: 5
         failure-rate-threshold: 50
         wait-duration-in-open-state: 10s
         permitted-number-of-calls-in-half-open-state: 3
         automatic-transition-from-open-to-half-open-enabled: true
+        slow-call-duration-threshold: 2s
+        slow-call-rate-threshold: 50
+        record-exceptions:
+          - java.net.ConnectException
+          - java.net.SocketTimeoutException
+          - org.springframework.web.client.ResourceAccessException
+        ignore-exceptions:
+          - java.lang.IllegalArgumentException
+    instances:
+      config-service-cb:
+        base-config: default
+        sliding-window-size: 10
+        failure-rate-threshold: 50
+        wait-duration-in-open-state: 10s
       user-service-cb:
+        base-config: default
         sliding-window-size: 15
         minimum-number-of-calls: 8
         failure-rate-threshold: 60
         wait-duration-in-open-state: 15s
+  
+  # 重试配置
+  retry:
+    configs:
+      default:
+        max-attempts: 3
+        wait-duration: 1s
+        enable-exponential-backoff: true
+        exponential-backoff-multiplier: 2
+        retry-exceptions:
+          - java.net.ConnectException
+          - java.net.SocketTimeoutException
+    instances:
+      config-service-retry:
+        base-config: default
+        max-attempts: 3
+      user-service-retry:
+        base-config: default
+        max-attempts: 2
+  
+  # 限流配置
+  ratelimiter:
+    configs:
+      default:
+        limit-for-period: 50
+        limit-refresh-period: 1s
+        timeout-duration: 0s
+    instances:
+      config-service-rl:
+        base-config: default
+        limit-for-period: 30
+      user-service-rl:
+        base-config: default
+        limit-for-period: 100
 
 # 日志配置
 logging:
